crates/crucible-cli/tests/snapshots/tui_snapshot_tests__panel_over_conversation.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                    ┌ Select database ─────────────────────┐                    "
"                    │> PostgreSQL - Full-featured RDBMS    │                    "
"                    │  SQLite - Embedded, single-file      │                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    └──────────────────────────────────────┘                    "
" > What database should I use?                                                  "
"                                                                                "
" ● I'll help you choose a database. Let me present some options.                "
"                                                                                "
"                                                                                "
" >                                                                              "
"                                                                                "
"▸ Plan │ Ready                                                                  "
