crates/crucible-cli/tests/snapshots/tui_snapshot_tests__panel_result_cancelled.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: json
---
{
  "cancelled": true,
  "selected": []
}
