crates/crucible-cli/tests/snapshots/tui_snapshot_tests__panel_search_hints.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                    ┌ Find note ───────────────────────────┐                    "
"                    │> Daily Note                          │                    "
"                    │  Todo List                           │                    "
"                    │  Project Ideas                       │                    "
"                    │  [Other...]                          │                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    └──────────────────────────────────────┘                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
