crates/crucible-cli/tests/snapshots/tui_snapshot_tests__panel_select_navigation.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                    ┌ Choose mode ─────────────────────────┐                    "
"                    │  plan - Plan before acting           │                    "
"                    │> act - Execute immediately           │                    "
"                    │  auto - Automatic execution          │                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    └──────────────────────────────────────┘                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
