crates/crucible-cli/tests/snapshots/tui_snapshot_tests__panel_with_allow_other.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                    ┌ Select framework ────────────────────┐                    "
"                    │> React                               │                    "
"                    │  Vue                                 │                    "
"                    │  Svelte                              │                    "
"                    │  [Other...]                          │                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    └──────────────────────────────────────┘                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
