crates/crucible-cli/tests/snapshots/tui_snapshot_tests__popup_agents_files.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"┌Streaming─────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Select────────────────────────────────────────────────────────────────────────┐"
"│> [agent] @dev-helper Developer assistant                                     │"
"│[agent] @test-runner Test automation                                          │"
"│[file] src/main.rs workspace                                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Input─────────────────────────────────────────────────────────────────────────┐"
"│[Plan] > @                                                                    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"Mode: Plan │ Ready                                                              "
