crates/crucible-cli/tests/snapshots/tui_snapshot_tests__popup_command_labels.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"┌Streaming─────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Select────────────────────────────────────────────────────────────────────────┐"
"│> [cmd] /search Search files                                                  │"
"│[cmd] /stats Show statistics                                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Input─────────────────────────────────────────────────────────────────────────┐"
"│[Act] > /s                                                                    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"Mode: Act │ Ready                                                               "
