crates/crucible-cli/tests/snapshots/tui_snapshot_tests__popup_commands_visible.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"┌Streaming─────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Select────────────────────────────────────────────────────────────────────────┐"
"│> [cmd] /help Show help information                                           │"
"│[cmd] /exit Exit the chat                                                     │"
"│[cmd] /clear Clear the screen                                                 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Input─────────────────────────────────────────────────────────────────────────┐"
"│[Plan] > /                                                                    │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"Mode: Plan │ Ready                                                              "
